--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,16 @@
         android:theme="@style/Theme.HelloAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DialogFragment"
+            android:exported="false" />
+        <activity
             android:name=".MainFragmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Pizza"
             android:exported="false" />
         <activity
             android:name=".FifthActivity"
@@ -27,7 +36,7 @@
             android:name=".SeconActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
