--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "HelloAndroid"
 include ':app'
+include ':app:bottomnav'
+include ':databaseexcercise'
